#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name          = "mon"
version       = "2.6.0"
description   = "MON covers a wide range of research topics in computer vision, machine learning, and deep learning."
license       = "MIT"
authors       = [
    "Long H. Pham <longpham3105@gmail.com>",
]
maintainers   = [
    "Long H. Pham <longpham3105@gmail.com>",
]
readme        = "docs/README.md"
repository    = "https://github.com/phlong3105/mon"
documentation = "https://github.com/phlong3105/mon/docs"
keywords      = ["computer vision", "image processing", "deep learning", "research"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
packages      = [
    {include="mon", from="src"},
]
include       = [
    ".gitignore",
    ".gitmodules",
    "LICENSE",
    "install.sh",
    "mkdocs.yml",
    "pyproject.toml",
    "rlsync.sh",
    # "env/IgnoreList",
    # "env/docker_script.txt",
    # "env/dockerfile",
    # "env/linux_console.yaml",
    # "env/linux_gui.yaml",
    # "env/macos.yaml",
    # "env/rename.sh",
    # "env/resilio-sync.service",
    {path="docs"},
    {path="env" },
]
exclude       = []

[tool.poetry.dependencies]
python        = ">=3.11, <3.13"
snntorch      = {path="src/mon/extra/snntorch",     develop=true}
spikingjelly  = {path="src/mon/extra/spikingjelly", develop=true}
ultralytics   = {path="src/mon/extra/ultralytics",  develop=true}

[tool.poetry.extras]
dev = [
    "snntorch",
    "spikingjelly",
    "ultralytics",
]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Comments
#
# 1. Fix thop error: AttributeError: 'some_object' object has no attribute 'total_ops'
# pip install --upgrade git+https://github.com/sile/pytorch-OpCounter.git@8f115d4aeaee787d7347b75f30be28164b02ccaa
